--- a/force-app/main/default/aura/GiveMagicSetupAssistant/GiveMagicSetupAssistant.cmp
+++ b/force-app/main/default/aura/GiveMagicSetupAssistant/GiveMagicSetupAssistant.cmp
@@ -7,9 +7,9 @@
     
     <aura:attribute name="activeSections" type="List" default="['A','C']" />
     <aura:attribute name="activeSectionsMessage" type="String" default="" />
-    <aura:attribute name="isButtonActive" type="Boolean" default="true" />
+    <aura:attribute name="isButtonActive" type="Boolean" default="false" />
     <aura:attribute name="inputdisabled" type="Boolean" default="false" />
-    
+     <aura:attribute name="SyncDisabled" type="Boolean" default="true" />
     <aura:attribute name="runcompleted" type="Boolean" default="false" />
     <aura:attribute name="intervalId" type="String" />
     <aura:attribute name="syncCheck" type="Boolean" default="false" />
@@ -17,9 +17,9 @@
     <aura:attribute name="paymentCheck" type="Boolean" default="false" />
     <aura:attribute name="videoCheck" type="Boolean" default="false" />
     
-    <aura:attribute name="username" type="String"/>
-    <aura:attribute name="password" type="String"/>
-    <aura:attribute name="workspcname" type="String"/>  
+    <aura:attribute name="clientid" type="String"/>
+    <aura:attribute name="clientsecret" type="String"/>
+    <aura:attribute name="integrationid" type="String"/>  
     <aura:attribute name="lstAccount" type="String[]" />
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
     <aura:attribute name="offset" type="integer" />
@@ -44,37 +44,11 @@
             </div>
             
         </div>
-        
-        <!--<div class="slds-clearfix">
-  
-        <div class="slds-float_left">
-      
-      <div class="slds-p-left_medium">
-      
-          <p><div class="sldLoadings-p-right_large"></div><lightning:icon iconName="action:approval" alternativeText="Approved" size="xx-small" /> <b>GIVEMAGIC + SALESFORCE OVERVIEW VIDEO</b></p>
-  
-      </div>
-        
-        </div>
-
-    </div>-->
-        
-        <!-- <div class="slds-p-left_x-large">
-           <div class="slds-text-body_small">
-                The quick brown fox jumps over the lazy dog.
-                <div class="slds-p-right_medium">
-                    <div class="slds-float_right" >
-                        <lightning:button label="watch video" title="watch video" onclick="{! c.watchvideo}"/>
-                     </div>
-                </div>
-            </div>
-            
-        </div> -->
-        
-        <center>
+ 
+       <!-- <center>
             
             <iframe src="{!$Label.c.Welcome_Video}" width="640" height="480" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="true"></iframe>
-        </center>
+        </center> 
         
         
         <div class="slds-p-bottom_x-large"></div>
@@ -84,22 +58,22 @@
         
         <div class="slds-border_bottom"></div>
         
-        <div class="slds-p-left_x-large">
+       <div class="slds-p-left_x-large">
             
             <div class="slds-p-top_large">
                 
                 <div class="slds-text-heading_small"><strong>GiveMagic User List</strong></div>
                 
                 
-              <!--  <div class="slds-text-body_small">The list of uers below is the list of users who have givemagic licenses.</div>  -->
+                <div class="slds-text-body_small">The list of uers below is the list of users who have givemagic licenses.</div>  
                 
                 <div class="slds-p-bottom_x-large"></div>
                 
             </div>
             
-        </div>
+        </div>-->
         
-        <div class="slds">
+       <!-- <div class="slds">
             
             
             <br/>
@@ -118,17 +92,14 @@
                         <th scope="col"><div class="slds-truncate" title="OwnerId">Email</div></th>
                         
                         <th scope="col"><div class="slds-truncate" title="LastModifiedById">Phone</div></th>
-                        
-                        
-                        
-                        
+                           
                         
                     </tr>
                     
                 </thead>
                 
                 <tbody>
-                    <!-- Use the Apex model and controller to fetch server side data -->
+                    
                     
                     
                     <aura:iteration items="{!v.lstAccount}" var="account">
@@ -166,8 +137,8 @@
                                                     <div class="slds-p-left_xx-large">
                                                         <div class="slds-p-left_xx-large">
                                                             <div class="slds-p-top_x-large">
-                                                                <input class="slds-button slds-button--brand slds-not-selected slds-float--right" type="button" onclick="{!c.OnNext}" value="Next" disabled="{!v.next}" style="margin-left: 2px;" />
-                                                                <input class="slds-button slds-button--brand slds-not-selected slds-float--right" type="button" onclick="{!c.OnPrevious}" value="Prev" disabled="{!v.prev}" />
+                                                                <input class="slds-button slds-button-brand slds-not-selected slds-float-right" type="button" onclick="{!c.OnNext}" value="Next" disabled="{!v.next}" style="margin-left: 2px;" />
+                                                                <input class="slds-button slds-button-brand slds-not-selected slds-float-right" type="button" onclick="{!c.OnPrevious}" value="Prev" disabled="{!v.prev}" />
                                                             </div>
                                                             
                                                         </div>
@@ -194,7 +165,7 @@
                 
             </div>
             
-        </div>
+        </div> 
         
         <div class="slds-p-bottom_x-large"></div>
         <div class="slds-clearfix">
@@ -213,44 +184,51 @@
                 
                 
             </div>
-        </div>
+        </div>-->
         
-        <div class="slds-border_bottom">   </div>
-        
+
         <lightning:accordion
                              allowMultipleSectionsOpen="true"
                              onsectiontoggle="{!c.handleSectionToggle1}"
                              activeSectionName="{!v.activeSections }"
                              >
-            <lightning:accordionSection name="A" label="Enter GiveMagic Workspace Login">
+         
+            <lightning:accordionSection name="A" label="GiveMagic Authentication">
                 <aura:set attribute="actions">
                     
                 </aura:set>
                 <aura:set attribute="body">
                     <div style="max-width: 200px;">
                         
-                        <label class="slds-form-element__label" for="text-input-id-1">
-                            <abbr class="slds-required" title="required">* </abbr><b>Workspace:</b></label>
-                        
-                        <lightning:input aura:id="inpfield3"  value="{!v.workspcname}" onchange="{!c.inputclick}" disabled="{!v.inputdisabled}"/> 
-                        <label class="slds-form-element__label" for="text-input-id-1">    
-                            <abbr class="slds-required" title="required">* </abbr><b>Email:</b></label>              
-                        <lightning:input aura:id="inpfield1"  value="{!v.username}" onchange="{!c.inputclick}" disabled="{!v.inputdisabled}"/>          
+                        <!--<label class="slds-form-element__label" for="text-input-id-1">    
+                            <abbr class="slds-required" title="required">* </abbr><b>Client Id:</b></label>              
+                        <lightning:input aura:id="inpfield1"  value="{!v.clientid}" onchange="{!c.inputclick}" disabled="{!v.inputdisabled}"/>          
                         
                         <label class="slds-form-element__label" for="text-input-id-1">
                             
-                            <abbr class="slds-required" title="required">* </abbr><b>Password:</b></label>
+                            <abbr class="slds-required" title="required">* </abbr><b>Client Secret:</b></label>
                         
-                        <lightning:input aura:id="inpfield2" type="Password" value="{!v.password}" onchange="{!c.inputclick}" disabled="{!v.inputdisabled}"/>          
+                        <lightning:input aura:id="inpfield2" type="Password" value="{!v.clientsecret}" onchange="{!c.inputclick}" disabled="{!v.inputdisabled}"/>          
                         
-                        <div class="slds-p-top_x-large">
-                            <lightning:button variant="brand"  label="Save"   disabled="{!v.isButtonActive}" onclick="{!c.callmedata}"  />                                       
-                        </div>          
+                        <label class="slds-form-element__label" for="text-input-id-1">
+                            
+                            <abbr class="slds-required" title="required">* </abbr><b>Integration Id :</b></label>
+                        
+                        <lightning:input aura:id="inpfield3" type="Password" value="{!v.integrationid}" onchange="{!c.inputclick}" disabled="{!v.inputdisabled}"/> --> 
+                     
+                        <div class="slds-p-top_x-large"> 
+                        
+                            <lightning:button variant="brand"  label="Connect"   disabled="{!v.isButtonActive}" onclick="{!c.callmedata}"  />                                       
+                        </div> 
+
+                    
+                    
                         
                     </div>
                     
                 </aura:set>
             </lightning:accordionSection>
+                
             
             
             <div class="slds-border_bottom">   </div>
@@ -268,27 +246,27 @@
                 </aura:set>
                 <aura:set attribute="body">
                    <!-- <p>Here is the givemagic setup assistant. You can watch videos and many more things .It's  a charitable organisation that helps the poors</p><br></br> -->
-                    <div class="slds-p-around_small">
+                   <!-- <div class="slds-p-around_small">
                         <aura:if isTrue="{!v.syncCheck}">
                             <lightning:icon iconName="utility:success" alternativeText="Success!" variant="Success"
                                             title="success variant small" size="x-small" />
                         </aura:if>
                         Sync your Actions
-                        <!--loading spinner start... style=Brand Medium (blue dots)-->
+                        loading spinner start... style=Brand Medium (blue dots)
                         <aura:if isTrue="{!v.IsSpinner}">
                             <div aura:id="spinnerId" class="slds-spinner_container">
-                                <div class="slds-spinner--brand  slds-spinner slds-spinner--large slds-is-relative" role="alert">
+                                <div class="slds-spinner-brand  slds-spinner slds-spinner-large slds-is-relative" role="alert">
                                     <span class="slds-assistive-text">Loading</span>
                                     <div class="slds-spinner__dot-a"></div>
                                     <div class="slds-spinner__dot-b"></div>
                                 </div>
                             </div>
                         </aura:if>
-                        <!-- Loading spinner end-->   
+                         Loading spinner end  
                         <div class="slds-float_right">
                             <lightning:button variant="brand-outline" label="Sync Actions" aura:id="btn-1" disabled="true" onclick="{!c.callQueue}"/>
                         </div>
-                    </div>
+                    </div>-->
                     <br></br>
                     <div class="slds-border_bottom"></div>
                     <div class="slds-p-around_small">
@@ -298,7 +276,9 @@
                         </aura:if>
                         Sync your Supporters
                         <div class="slds-float_right">
-                            <lightning:button variant="brand-outline" label="Sync Supporters" aura:id="btn-2" disabled="true" onclick="{!c.callQueue}"/>
+                            <lightning:button variant="brand-outline" label="Sync Supporters" aura:id="btn-2" disabled="{!v.SyncDisabled}" onclick="{!c.callQueue}"/>
+                        	<lightning:spinner aura:id="mySpinner" alternativeText="Processing.." title="Processing.." variant="brand" size="large" class="slds-hide"/>
+    
                         </div>
                     </div>
                     <br></br>
@@ -310,7 +290,8 @@
                         </aura:if>
                         Sync your Donations
                         <div class="slds-float_right">
-                            <lightning:button variant="brand-outline" label="Sync Donations" aura:id="btn-3" disabled="true" onclick="{!c.callQueue}" />
+                            <lightning:button variant="brand-outline" label="Sync Donations" aura:id="btn-3" disabled="{!v.SyncDisabled}" onclick="{!c.callQueue}" />
+                          
                         </div>
                     </div>
                     <br></br>
@@ -323,12 +304,13 @@
                         Sync your Videos
                         
                         <div  class="slds-float_right slds-align_absolute-center" >
-                            <lightning:input type="toggle" name="toggleButton" aura:id="tglbtn"  label="Log Videos as Tasks" 
+                          <!--  <lightning:input type="toggle" name="toggleButton" aura:id="tglbtn"  label="Log Videos as Tasks" 
                                              messageToggleActive="ON" messageToggleInactive="OFF" 
                                              onchange="{!c.logVideos}" checked="{!v.logvideos}" class="slds-m-top_x-small"/>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
                             
-                            <lightning:button variant="brand-outline" label="Sync Video" aura:id="btn-4" disabled="true" onclick="{!c.callQueue}"/>
+                            <lightning:button variant="brand-outline" label="Sync Video" aura:id="btn-4" disabled="{!v.SyncDisabled}" onclick="{!c.callQueue}"/>
+                           
                             
                         </div>
                     </div>
